Fixed spacing between archive items

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,7 +211,7 @@ hr {
 
 .posts-item {
   height: 8em;
-  margin-top: 1rem;
+  margin-top: 2rem;
   background-color: transparent;
   background-size: cover;
   background-repeat: no-repeat;
